# rei-sort

./: .gitignore  CHANGELOG.md  Doxyfile  LICENSE  README.md  ROADMAP.md  example_simple.cpp
.github/workflows/: ci.yml
reicore/: CMakeLists.txt  benchmark.cpp  build.sh  example.cpp  pyproject.toml  rei_sort.hpp  reicore.cpp  test.cpp
