[build-system]
requires = ["scikit-build-core>=0.5", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "reicore"
version = "2.0.0"
description = "Rei Sort - High-performance C++20 sorting engine with Python bindings (NumPy, GIL release)"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Rei" }]
keywords = ["sort", "sorting", "algorithm", "numpy", "performance", "c++"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
numpy = ["numpy"]

[project.urls]
Repository = "https://github.com/rei/rei-sort"  # Update with your repo URL

[tool.scikit-build]
cmake.verbose = true
